objects/PFA_Analytical_Snapshot__c.object
<CustomObject>
    <fields>
        <fullName>ApplicationDate__c</fullName>
        <label>ApplicationDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ApplicationNumber__c</fullName>
        <label>ApplicationNumber</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ApplicationState__c</fullName>
        <label>ApplicationState</label>
        <picklist>
            <picklistValues>
                <fullName>ACT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NSW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QLD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TAS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VIC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Application_Date_Formula__c</fullName>
        <formula>ApplicationDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Application Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AssetType__c</fullName>
        <label>AssetType</label>
        <picklist>
            <picklistValues>
                <fullName>Bike</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Caravan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Motor Vehicle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <label>Channel</label>
        <picklist>
            <picklistValues>
                <fullName>PAF - Dealer Channel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PAF - Auto Broker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PAF - Commercial Broker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PAF - Mortgage Broker</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Last_Modified_Date__c</fullName>
        <label>Last Modified Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MileStone__c</fullName>
        <label>MileStone</label>
        <picklist>
            <picklistValues>
                <fullName>Application</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved in Principle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loan Documents Issued</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NetFinancedAmount__c</fullName>
        <label>NetFinancedAmount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sub_Status__c</fullName>
        <label>Sub Status</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved With Condition(s)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Awaiting Info</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Received</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Declined</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>InProcess</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Re-Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>With Introducer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Withdrawn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Settled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TotalFinancedAmount__c</fullName>
        <label>TotalFinancedAmount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>PAF Analytical Snapshot</label>
    <nameField>
        <displayFormat>PFA-Snap{0000}</displayFormat>
        <label>PFA Analytical Snapshot Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PAF Analytical Snapshot</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>